--- a/index.html
+++ b/index.html
@@ -1,9 +1,56 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<tile>solr_apache</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Solr Apache Documentation</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<p>hello</p>
+  <header>
+    <h1>Solr Apache Documentation</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#installation">Installation</a></li>
+      <li><a href="#configuration">Configuration</a></li>
+      <li><a href="#indexing">Indexing</a></li>
+      <li><a href="#search">Search</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="introduction">
+      <h2>Introduction</h2>
+      <p>Your content here...</p>
+    </section>
+
+    <section id="installation">
+      <h2>Installation</h2>
+      <p>Your content here...</p>
+    </section>
+
+    <section id="configuration">
+      <h2>Configuration</h2>
+      <p>Your content here...</p>
+    </section>
+
+    <section id="indexing">
+      <h2>Indexing</h2>
+      <p>Your content here...</p>
+    </section>
+
+    <section id="search">
+      <h2>Search</h2>
+      <p>Your content here...</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Solr Apache Documentation. All rights reserved.</p>
+  </footer>
 </body>
 </html>
 
