--- a/index.html
+++ b/index.html
@@ -318,8 +318,72 @@
   </section>
 
   <section id="indexing">
-    <h2>Indexing</h2>
-    <p><!-- Your content here --></p>
+    <h4>Indexing using python </h4>
+    <h1>Python Indexing in Apache Solr</h1>
+  <p>Python can be used to index data into Apache Solr, allowing you to populate your Solr index with data from various sources, such as databases, APIs, or local files.</p>
+  
+  <h2>Python Code Example</h2>
+  <pre><code>
+    import pymysql
+    import json
+    import pysolr
+
+    # Establish database connection
+    host = 'localhost'
+    username = 'root'
+    password = ''
+    database = 'db1'
+    connection = pymysql.connect(host=host, user=username, password=password, db=database)
+    cursor = connection.cursor()
+
+    # Fetch data from the database
+    query = "SELECT * FROM sampl2"
+    cursor.execute(query)
+    rows = cursor.fetchall()
+
+    # Close the database connection
+    connection.close()
+
+    # Convert rows to a list of dictionaries
+    data = []
+    for row in rows:
+        dict_row = {
+            "id": row[0],
+            "name": row[1],
+            "description": row[2],
+            "school": row[3],
+            "address": row[4],
+            "location": row[5]
+        }
+        data.append(dict_row)
+
+    # Convert data to JSON string
+    json_data = json.dumps(data, indent=4)
+
+    # Write JSON data to a file
+    file_path = 'data.json'
+    with open(file_path, 'w') as file:
+        file.write(json_data)
+
+    # Connect to Solr
+    solr = pysolr.Solr('http://localhost:8983/solr/mycore')
+
+    # Index the JSON data in Solr
+    solr.add(data)
+
+    # Commit the changes to make them visible in the index
+    solr.commit()
+  </code></pre>
+  
+  <p>This Python code demonstrates how to index data into Apache Solr using the <code>pysolr</code> library.</p>
+  <ol>
+    <li>First, the code establishes a connection to a MySQL database and fetches data from the <code>sampl2</code> table.</li>
+    <li>Next, it converts the fetched data into a list of dictionaries, where each dictionary represents a document to be indexed.</li>
+    <li>The data is then converted to a JSON string and written to a file named <code>data.json</code>.</li>
+    <li>The code connects to the Solr instance running at <code>http://localhost:8983/solr/mycore</code>.</li>
+    <li>The JSON data is indexed in Solr using the <code>solr.add()</code> method.</li>
+    <li>Finally, the changes are committed to make them visible in the Solr index using <code>solr.commit()</code>.</li>
+  </ol>
   </section>
 
   <section id="search">
