--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
 
   <section id="installation">
     <h2>Installation</h2>
-    <h1>Installation and Configuration of Apache Solr on Ubuntu</h1>
   <p>Open the terminal in Ubuntu in the sudo version</p>
   <p>Apache Solr 7 requires Java 8 or greater to run. Make sure your system fulfills the Java requirements of Apache Solr.</p>
   <code>sudo apt install openjdk-11-jdk</code>
@@ -303,10 +302,10 @@
   </section>
 
   <section id="indexing">
-    <h4>Python Indexing in Apache Solr</h4>
+    <h2>Indexing</h2>
   <p>Python can be used to index data into Apache Solr, allowing you to populate your Solr index with data from various sources, such as databases, APIs, or local files.</p>
   
-  <h2>Python Code Example</h2>
+  <h4>Python Code Example</h4>
   <pre><code>
     import pymysql
     import json
