adding top arraw

--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
       text-align: center;
       font-size: 14px;
     }
+   .top-arrow {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #f0f0f0;
+  color: #000000;
+  font-size: 24px;
+  padding: 10px;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+.top-arrow:hover {
+  background-color: #cccccc;
+}
+
   </style>
 </head>
 <body>
@@ -456,5 +472,7 @@
 <footer>
   <p>&copy; 2023 Solr Apache Documentation. All rights reserved.</p>
 </footer>
+<a href="#" class="top-arrow">&#8593;</a>
+
 </body>
 </html>
