--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <main>
   <section id="introduction">
     <h2>Introduction</h2>
-     <p>(stands for Searching On Lucene w/ Replication). Solr is an open-source, enterprise search platform that can be used to index and search large amounts of data. It is built on top of Apache Lucene, which is a popular full-text search library. Solr provides several features that make it a powerful tool for search and analytics, including:</p>
+     <p>SOLR: (stands for Searching On Lucene w/ Replication). Solr is an open-source, enterprise search platform that can be used to index and search large amounts of data. It is built on top of Apache Lucene, which is a popular full-text search library. Solr provides several features that make it a powerful tool for search and analytics, including:</p>
   <ul>
     <li>Flexible schema: Solr allows you to define your schema, making it easy to index and search different data types.</li>
     <li>Scalability: Solr can be scaled to handle large amounts of data.</li>
