--- a/index.html
+++ b/index.html
@@ -68,11 +68,31 @@
   text-decoration: none;
   border-radius: 50%;
 }
-
 .top-arrow:hover {
   background-color: #cccccc;
 }
+ /* Responsive styles */
+    @media screen and (max-width: 768px) {
+      header {
+        padding: 10px;
+      }
 
+      nav ul li {
+        display: block;
+        margin-bottom: 10px;
+      }
+
+      main {
+        padding: 10px;
+      }
+
+      .top-arrow {
+        bottom: 10px;
+        right: 10px;
+        font-size: 20px;
+        padding: 5px;
+      }
+    }
   </style>
 </head>
 <body>
