--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Solr Apache Documentation</title>
   <style>
+    /* Default styles */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      line-height:1.6;
+      line-height: 1.6;
     }
 
     header {
@@ -57,20 +58,46 @@
       text-align: center;
       font-size: 14px;
     }
-   .top-arrow {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #f0f0f0;
-  color: #000000;
-  font-size: 24px;
-  padding: 10px;
-  text-decoration: none;
-  border-radius: 50%;
-}
-.top-arrow:hover {
-  background-color: #cccccc;
-}
+
+    .top-arrow {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #f0f0f0;
+      color: #000000;
+      font-size: 24px;
+      padding: 10px;
+      text-decoration: none;
+      border-radius: 50%;
+    }
+
+    .top-arrow:hover {
+      background-color: #cccccc;
+    }
+
+    /* Responsive styles */
+    @media only screen and (max-width: 600px) {
+      /* Adjust header */
+      header {
+        padding: 10px;
+      }
+
+      /* Make nav vertical */
+      nav ul li {
+        display: block;
+        margin-bottom: 10px;
+      }
+
+      /* Adjust main content padding */
+      main {
+        padding: 10px;
+      }
+
+      /* Reduce footer font size */
+      footer {
+        font-size: 12px;
+      }
+    }
   </style>
 </head>
 <body>
